# ollie

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MASTER_PROMPT.md  Makefile  README.md  docker-compose.local.yml  monitoring.yaml  pyproject.toml
.github/: ISSUE_ARCHITECTURE_MIGRATION.md
.github/workflows/: build-publish.yaml  ci.yaml
docker/: core.Dockerfile  frontend.Dockerfile  ollama.Dockerfile  training.Dockerfile  tts.Dockerfile  ui.Dockerfile  whisper.Dockerfile
docs/: STREAMING_TRANSCRIPTION.md
frontend/: README.md  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: OllieAvatar.css  OllieAvatar.jsx  TranscriptionView.css  TranscriptionView.jsx
helm/aeron/: Chart.yaml  values.yaml
helm/aeron/templates/: cronjob-training.yaml  deployment-core.yaml  deployment-ollama.yaml  deployment-tts.yaml  deployment-ui.yaml  deployment-whisper.yaml  pvc-data.yaml
helm/ollie/: values.yaml
helm/ollie/templates/: cronjob-training.yaml  deployment-core.yaml  deployment-ollama.yaml  deployment-tts.yaml  deployment-whisper.yaml
scripts/: backup-nightly.sh  deploy-eldertree.sh  start-ollama.sh
src/aeron/core/: app.py
src/aeron/memory/: embeddings.py
src/aeron/storage/: database.py  models.py
src/aeron/training/: export.py  train.py
src/aeron/transcription/: __init__.py  api.py
src/aeron/ui/: app.py
src/ollie/core/: app.py
src/ollie/llm/: __init__.py  ollama_client.py
src/ollie/memory/: __init__.py  retrieval.py
src/ollie/storage/: __init__.py  database.py  models.py
src/ollie/training/: export.py  train.py
src/ollie/transcription/: api.py  streaming.py  whisper_service.py
src/ollie/tts/: __init__.py  api.py  voice_service.py
src/ollie/ui/: app.py
